# bulk_average

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
include/: bulk_average.hpp
nix/: devshell.nix  toolchain.nix
scripts/: format.sh  tidy.sh
src/: CMakeLists.txt  bulk_average.cpp
tests/: CMakeLists.txt  bulk_average_test.cpp
